--- a/work-safe/src/app/landing-page/landing-page.component.html
+++ b/work-safe/src/app/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
 
     <div class="row text-left p-5">
 
-        <div class="col-12 col-md-5 text-left p-5 m-5">
+        <div class="col-12 col-md-5 text-left p-xl-5 m-xl-5 m-0 mt-4 p-1">
 
             <h1> GESTÃO </h1>
             <h1> SEGURANÇA</h1>
