update image front

--- a/work-safe/src/app/landing-page/landing-page.component.html
+++ b/work-safe/src/app/landing-page/landing-page.component.html
@@ -18,11 +18,19 @@
 
         </div>
 
-        <div class="col-12 col-md-5 m-2">
+        <!-- Web version -->
+        <div class="col-12 col-md-5 m-2  d-none d-md-block ">
 
-            <img class="circle" src="../../assets/circle.png" > 
+            <img class="circle" src="../../assets/circle.png " > 
 
             <img class="team" src="../../assets/team.png" > 
+
+        </div>
+
+        <!-- Mobile version -->
+        <div class="col-12 col-md-12 m-2  d-block d-md-none">
+
+            <img class="circle-mobile" src="../../assets/circle-mobile.png" > 
 
         </div>
 
