--- a/work-safe/src/app/Components/footer/footer.component.html
+++ b/work-safe/src/app/Components/footer/footer.component.html
@@ -10,7 +10,7 @@
       <div class="row">
   
         <!-- Grid column -->
-        <div class="text-md-center  col-md-4 mt-md-0 mt-3 p-l text-left">
+        <div class="text-md-center  col-md-4 m-4 m-md-0 mt-md-0 mt-3 p-l text-left">
   
           <!-- Content -->
           <h4 class="text">Contactos</h4>
@@ -24,7 +24,7 @@
   
   
         <!-- Grid column -->
-        <div class="col-12  col-md-4 mb-md-0 mb-3 text-left">
+        <div class="col-12  col-md-4 col-md-4 m-4 m-md-0 mb-md-0 mb-3 text-left">
   
             <!-- Links -->
             <h3 class="text" >Serviços</h3>
@@ -48,7 +48,7 @@
           <!-- Grid column -->
   
           <!-- Grid column -->
-          <div class="col-12 col-md-4 mb-md-0 mb-3 text-left">
+          <div class="col-12 col-md-4 col-md-4 m-4 m-md-0 mb-md-0 mb-3 text-left">
   
             <!-- Links -->
             <h3 class="" > Encontre-nos Em: </h3>
