--- a/work-safe/src/app/Components/nav/nav.component.css
+++ b/work-safe/src/app/Components/nav/nav.component.css
@@ -15,6 +15,7 @@ li{
 .navbar{
     margin-left: 18%;
     margin-right:  18%;
+    margin-top: 10px;
 }
 
 #navbarNavDropdown{
@@ -34,5 +35,7 @@ li{
         margin-left: 8%;
         margin-right:  8%;
     }
+
+    
 }
     
