--- a/work-safe/src/app/Components/nav/nav.component.html
+++ b/work-safe/src/app/Components/nav/nav.component.html
@@ -4,12 +4,12 @@
             <img class="nav-logo text-center" src="./assets/logo.jpg">
         </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse"  id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
+        <div class="collapse navbar-collapse "  id="navbarNavDropdown">
+            <ul class="navbar-nav ">
                 <li class="nav-item active">
                     <a  href="#">Serviços </a>
                 </li>
