--- a/work-safe/src/app/landing-page/landing-page.component.html
+++ b/work-safe/src/app/landing-page/landing-page.component.html
@@ -13,24 +13,24 @@
 
             <h4> Damos ao seu projeto a viabilidade necessessaria para concretizar as suas obras. </h4>
 
-            <button class="btn2"> Serviços </button>
+            <button class="btn2" > Serviços </button>
             <button class="btn3 m-4"> Contactar </button>
 
         </div>
 
         <!-- Web version -->
-        <div class="col-12 col-md-5 m-2  d-none d-md-block ">
+        <div class="col-12 col-md-5 m-2  d-none d-md-block " >
 
-            <img class="circle" src="../../assets/circle.png " > 
+            <img class="circle" src="../../assets/circle.png " data-aos="zoom-in-up" data-aos-duration="490" > 
 
-            <img class="team" src="../../assets/team.png" > 
+            <img class="team" src="../../assets/team.png"  data-aos="zoom-in-up" data-aos-duration="2500"> 
 
         </div>
 
         <!-- Mobile version -->
         <div class="col-12 col-md-12 m-2  d-block d-md-none">
 
-            <img class="circle-mobile" src="../../assets/circle-mobile.png" > 
+            <img class="circle-mobile" src="../../assets/circle-mobile.png" data-aos="zoom-in-up" data-aos-duration="2290"  > 
 
         </div>
 
