landing page update

--- a/work-safe/src/app/Components/nav/nav.component.html
+++ b/work-safe/src/app/Components/nav/nav.component.html
@@ -20,7 +20,7 @@
                     <a  href="#">Contactos</a>
                 </li>
                 <li>
-                    <button> <a style="color: white;" href="/login"> Login </a> </button>
+                    <button class=""> <a style="color: white;" href="/login"> Login </a> </button>
                 </li>
             </ul>
 
