--- a/work-safe/src/app/landing-page/landing-page.component.html
+++ b/work-safe/src/app/landing-page/landing-page.component.html
@@ -30,7 +30,125 @@
         <!-- Mobile version -->
         <div class="col-12 col-md-12 m-2  d-block d-md-none">
 
-            <img class="circle-mobile" src="../../assets/circle-mobile.png" data-aos="zoom-in-up" data-aos-duration="2290"  > 
+            <img class="circle-mobile" src="../../assets/circle-mobile.png" data-aos="fade-down" data-aos-duration="2999"  > 
+
+        </div>
+
+    </div>
+
+    <div class="row m-4 mb-5">
+
+        <div class="col-12 m-1 text-center" data-aos="zoom-in" data-aos-duration="890">
+            <h2 class="opacity-25 mb-md-1 mb-3"> Parceiros </h2> 
+        </div>
+
+        <div class="col-12 text-center" >
+            
+            <img class="m-1 m-md-5 logo-sm opacity-25" (click)="openInstagram('af')" data-aos="zoom-in" data-aos-duration="790" src="../../assets/logo-af.png"> 
+
+            <img class="m-1 m-md-5 logo-sm opacity-25" (click)="openInstagram('deccer')" data-aos="zoom-in" data-aos-duration="1290" src="../../assets/logo-deccer.png"> 
+
+            <img class="m-1 m-md-5 logo-sm opacity-25" (click)="openInstagram('witech')"  data-aos="zoom-in" data-aos-duration="1890" src="../../assets/logo-witech.png"> 
+
+            <img class="m-1 m-md-5 logo-sm opacity-25" (click)="openInstagram('amm')" data-aos="zoom-in" data-aos-duration="2890" src="../../assets/logo-amm.png"> 
+
+        </div>
+
+    </div>
+
+</div>
+
+<div class="container-fluid bg2 pb-5">
+
+    <div class="row justify-content-center mt-4">
+        
+        <h1 class=" mt-5 pt-5 text-center opacity-95">
+            OS NOSSOS SERVIÇOS
+        </h1>
+
+        <div class="col-md-3 m-4 p-5 box-black text-justify text-center " data-aos="flip-right" data-aos-duration="1400">
+          <img class="img-service" src="../../assets/img1.png">
+          <h2>Plano Segurança</h2>
+          <p class="mt-4"> O nosso PS&S , certificado pelo e Rigor no plano de orçamentação. Todos os trabalhos adjacentes listados e detalhados, ao favor do cliente.</p>
+        
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+          </svg>      
+
+        </div>
+
+        
+        <div class="col-md-3 m-4 p-5 box-black text-justify text-center  " data-aos="flip-left" data-aos-duration="1400"> 
+            <img class="img-service"  src="../../assets/img2.png">        
+            <h2>Plano Trabalho</h2>
+            <p class="mt-4">Dinamismo na resposta. Gostamos de favorecer ao cliente uma vasta possiblidade de comunicação e acessibilidade. </p>
+        
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+              </svg>
+
+        </div>
+
+        <div class="col-md-3 m-4 p-5 box-black text-justify text-center " data-aos="flip-right" data-aos-duration="1400">
+          <img class="img-service" src="../../assets/img3.png">        
+          <h2>Gestão em Obra</h2>
+          <p class="mt-4">Planeamento e resposta no prazo de uma semana a todos os orçamentos.</p>
+        
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+          </svg>
+
+        </div>
+
+        <div class="col-md-3 m-4 p-5 box-black text-justify text-center " data-aos="flip-right" data-aos-duration="1400">
+            <img class="img-service" src="../../assets/img1.png">
+            <h2>Higiene no Trabalho</h2>
+            <p class="mt-4"> Credibilidade e Rigor no plano de orçamentação. Todos os trabalhos adjacentes listados e detalhados, ao favor do cliente.</p>
+          
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+              </svg>
+
+
+        </div>
+  
+          
+          <div class="col-md-3 m-4 p-5 box-black text-justify text-center  " data-aos="flip-left" data-aos-duration="1400"> 
+              <img class="img-service"  src="../../assets/img2.png">        
+              <h2>Gestão de Pervenção</h2>
+              <p class="mt-4">Dinamismo na resposta. Gostamos de favorecer ao cliente uma vasta possiblidade de comunicação e acessibilidade. </p>
+          
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+              </svg>
+            
+            </div>
+
+      </div>
+
+</div>
+
+<div class="container-fluid bg3" >
+
+    <div class="row justify-content-center m-3" style="padding-top: 5%; padding-bottom: 4%;"> 
+
+        <div class="col-12 col-md-5  text-center p-3 p-md-5 mt-5">
+
+            <img style="width: 100%; height: 92%;" src="../../assets/team22.png">
+
+        </div>
+
+        <div class="col-12 col-md-5 text-left p-4 p-md-5 mt-5">
+
+            <p style="color: #0ad6a6; font-weight: bold;" data-aos="zoom-in" data-aos-duration="490" > // N a W o r k s a f e</p>
+
+            <h1 style="color: white;"> A Nossa Missão</h1>
+
+            <p style="color: white; letter-spacing: 2px; word-spacing: 3px; line-height: 1.7;" class="mt-4"> A Work Safe disponibiliza aos seus clientes o uso de avançado sistema de gestão operacional (extranet) que permite uma visualização em tempo real de todos os aspectos relacionados com o funcionamento dos serviços contratualizados.
+
+                Esta plataforma poderá ser utilizada através da área de clientes no site Workcare e permite uma otimização do tempo despendido em processos administrativos, bem como um controlo rigoros. </p>
+            
+            <button class="btn2 mt-3 mb-5"  data-aos="zoom-in-up" data-aos-duration="2490"  > Saber mais </button>
 
         </div>
 
