--- a/work-safe/src/app/login-page/login-page/login-page.component.html
+++ b/work-safe/src/app/login-page/login-page/login-page.component.html
@@ -1,6 +1,4 @@
 
-
-
   <!-- Content here -->
 <div class="container-fluid bg  ">
   
@@ -46,7 +44,7 @@
 
   </div>
 
-  <div class="row justify-content-center pb-5">
+  <div class="row justify-content-center pb-5 mt-3">
 
     <img class="social-media" src="../../../assets/face.png">
 
@@ -54,6 +52,10 @@
 
     <img class="social-media" src="../../../assets/gmail.png">
 
+    <div class="col-12 text-center mt-3"> 
+      <p style="color: rgb(126, 126, 128); opacity: 0.4; cursor: pointer; font-size: 11px;"> <a (click)="instagram()">  All rights reserved to Witech - Software , Inc </a></p>
+
+    </div>
 
   </div>
 
