--- a/work-safe/src/app/login-page/login-page/login-page.component.css
+++ b/work-safe/src/app/login-page/login-page/login-page.component.css
@@ -106,5 +106,12 @@ input:active {
 
 
 @media (max-width: 760px){
-    
+    .social-media{
+        margin: 10px;
+        opacity:0.88;
+         width: 49px;
+         height: 25px;
+         transition: 0.5s;
+         cursor: pointer;
+    }
 }
