another section added

--- a/work-safe/src/app/landing-page/landing-page.component.html
+++ b/work-safe/src/app/landing-page/landing-page.component.html
@@ -39,18 +39,18 @@
     <div class="row m-4 mb-5">
 
         <div class="col-12 m-1 text-center" data-aos="zoom-in" data-aos-duration="890">
-            <h2 class="opacity-25 mb-md-1 mb-3"> Parceiros </h2> 
+            <h2 class="opacity-25 mb-md-1 mb-3 space-word" > Parceiros </h2> 
         </div>
 
         <div class="col-12 text-center" >
             
-            <img class="m-1 m-md-5 logo-sm opacity-25" (click)="openInstagram('af')" data-aos="zoom-in" data-aos-duration="790" src="../../assets/logo-af.png"> 
+            <img class="m-2 m-md-5 logo-sm opacity-25" (click)="openInstagram('af')" data-aos="zoom-in" data-aos-duration="790" src="../../assets/logo-af.png"> 
 
-            <img class="m-1 m-md-5 logo-sm opacity-25" (click)="openInstagram('deccer')" data-aos="zoom-in" data-aos-duration="1290" src="../../assets/logo-deccer.png"> 
+            <img class="m-2 m-md-5 logo-sm opacity-25" (click)="openInstagram('deccer')" data-aos="zoom-in" data-aos-duration="1290" src="../../assets/logo-deccer.png"> 
 
-            <img class="m-1 m-md-5 logo-sm opacity-25" (click)="openInstagram('witech')"  data-aos="zoom-in" data-aos-duration="1890" src="../../assets/logo-witech.png"> 
+            <img class="m-2 m-md-5 logo-sm opacity-25" (click)="openInstagram('witech')"  data-aos="zoom-in" data-aos-duration="1890" src="../../assets/logo-witech.png"> 
 
-            <img class="m-1 m-md-5 logo-sm opacity-25" (click)="openInstagram('amm')" data-aos="zoom-in" data-aos-duration="2890" src="../../assets/logo-amm.png"> 
+            <img class="m-2 m-md-5 logo-sm opacity-25" (click)="openInstagram('amm')" data-aos="zoom-in" data-aos-duration="2890" src="../../assets/logo-amm.png"> 
 
         </div>
 
@@ -60,7 +60,7 @@
 
 <div class="container-fluid bg2 pb-5">
 
-    <div class="row justify-content-center mt-4">
+    <div id="services" class="row justify-content-center mt-4">
         
         <h1 class=" mt-5 pt-5 text-center opacity-95">
             OS NOSSOS SERVIÇOS
@@ -130,7 +130,7 @@
 
 <div class="container-fluid bg3" >
 
-    <div class="row justify-content-center m-3" style="padding-top: 5%; padding-bottom: 4%;"> 
+    <div class="row justify-content-center m-3 mt-0" style="padding-top: 5%; padding-bottom: 4%;"> 
 
         <div class="col-12 col-md-5  text-center p-3 p-md-5 mt-5">
 
@@ -149,6 +149,57 @@
                 Esta plataforma poderá ser utilizada através da área de clientes no site Workcare e permite uma otimização do tempo despendido em processos administrativos, bem como um controlo rigoros. </p>
             
             <button class="btn2 mt-3 mb-5"  data-aos="zoom-in-up" data-aos-duration="2490"  > Saber mais </button>
+
+        </div>
+
+    </div>
+
+</div>
+
+<div class="container-fluid "> 
+
+    <div class="row justify-content-center" style="margin: 10%">
+
+        <div class="col-12 col-md-5 m-5">
+
+            <h1> Os nossos Trabalhos</h1>
+
+            <p class="mb-4" style="color: #0ad6a6; font-weight: bold;" data-aos="zoom-in" data-aos-duration="490" > // N a W o r k s a f e</p>
+
+            <h5> Trabalhamos nas areas de reabilitação, construção civil e renovação de interiores. 
+                Todos os trabalhos de gestão, são segurados pelos nossos tecnicos de uma forma segura e linear para 
+                que o seu projeto desenvolva  conforme o pretendido.
+            </h5>
+
+        </div>
+        
+        <div class="col-12 col-md-5 text-center p-2 p-md-5 somesection">
+            
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="../../assets/obra1.jpg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="../../assets/obra2.jpg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="../../assets/obra1.jpg" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only"></span>
+                </a>
+              </div>
+
+        </div>
+
+        <div class="col-6 block-1" >
 
         </div>
 
