--- a/work-safe/src/app/Components/nav/nav.component.html
+++ b/work-safe/src/app/Components/nav/nav.component.html
@@ -11,10 +11,10 @@
         <div class="collapse navbar-collapse "  id="navbarNavDropdown">
             <ul class="navbar-nav ">
                 <li class="nav-item active">
-                    <a  href="#">Serviços </a>
+                    <a  href="#services">Serviços </a>
                 </li>
                 <li class="nav-item">
-                    <a  href="#">Sobre</a>
+                    <a  href="#">Projetos</a>
                 </li>
                 <li class="nav-item">
                     <a  href="#">Contactos</a>
