--- a/work-safe/src/app/landing-page/landing-page.component.css
+++ b/work-safe/src/app/landing-page/landing-page.component.css
@@ -1,6 +1,6 @@
 
-.m-xl{
-    margin: 2%;
+.m-xl{ 
+    margin: 2%; 
 }
 
 .circle{
@@ -9,6 +9,58 @@
     height: 75%;
     z-index: -1;
     right: 0;
+}
+
+.team{
+    animation: myteam 3s ease-in-out 1s infinite;
+}
+
+.team:hover{
+    transform: rotate(-12deg);
+}
+
+.block-1{
+    position: relative; 
+    top: -140px;
+    left: 100px;
+    padding: 10%;
+    background-color: #05cf9f;
+    border-radius: 30% 90% 53% 37% / 21% 94% 56%;
+    z-index: -1;
+    transition: 1s;
+    animation:  animate 10s 1s infinite;
+    
+
+}
+
+@keyframes animate {
+    
+    0%{
+        transform: rotate(0deg)
+    }
+    
+    10%{ 
+        transform: rotate(161deg)
+
+    }
+
+    44%{ 
+        transform: rotate(190deg)
+
+    }
+    70%{ 
+        transform: rotate(221deg)
+
+    }
+    80%{ 
+        transform: rotate(111deg)
+
+    }
+
+    100%{
+        transform: rotate(360deg)
+    }
+    
 }
 
 .circle-mobile{
@@ -22,7 +74,10 @@
     position: absolute;
     z-index: 1;
     right: 0;
+    transition: all 2s ease-in-out;
 }
+
+
 
 .logo-sm{
     width: 80px;
@@ -36,6 +91,11 @@
     transition: 0.5s;
     transform: scale(1.24);
 
+}
+
+.space-word{
+    letter-spacing: 7px;
+    font-weight: bold; 
 }
 
 .bg2{
@@ -70,11 +130,22 @@
 
 @media (max-width: 580px) { 
     
-.logo-sm{
-    width: 50px;
-    height: 40px;
-    opacity: 0.20;
-    transition: 0.5s;
-    cursor: pointer;
-}
+    .logo-sm{
+        width: 50px;
+        height: 40px;
+        opacity: 0.20;
+        transition: 0.5s;
+        cursor: pointer;
+    }
+
+    .block-1{
+        float: static; 
+        top: -564px;
+        left: -154px;
+        padding: 38%;
+        background-color: #05cf9f;
+        border-radius: 30% 90% 53% 27% / 21% 94% 56%;
+        z-index: -1;
+    }
+
 }
