--- a/work-safe/src/styles.css
+++ b/work-safe/src/styles.css
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+html{
+    
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+body {-webkit-transform:translate(0,0,0);}
+
 h1,h2,h3,h4,h5 {
     font-family: Gotham Book,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
     color: #273460;
