contact page added

--- a/work-safe/src/app/Components/footer/footer.component.html
+++ b/work-safe/src/app/Components/footer/footer.component.html
@@ -1,6 +1,6 @@
 
 
-<footer id="contactos" class="page-footer font-small  pt-5  pb-5"  style="background: linear-gradient(to top,#0b143f, #ffffff);
+<footer id="contactos" class="page-footer font-small  pt-5  pb-5"  style="background: linear-gradient(to top,#0b143f, #0b143f);
 ; color: white;">
 
     <!-- Footer Links -->
