--- a/work-safe/src/app/Components/nav/nav.component.html
+++ b/work-safe/src/app/Components/nav/nav.component.html
@@ -17,7 +17,7 @@
                     <a  href="#">Projetos</a>
                 </li>
                 <li class="nav-item">
-                    <a  href="#">Contactos</a>
+                    <a  href="./contact">Contactos</a>
                 </li>
                 <li>
                     <button class=""> <a style="color: white;" href="/login"> Login </a> </button>
