--- a/work-safe/src/app/landing-page/landing-page.component.html
+++ b/work-safe/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 
 <app-nav></app-nav>
 
+<!-- SECTION 1 -->
 <div class="container-fluid">
 
     <div class="row text-left p-5">
@@ -13,8 +14,8 @@
 
             <h4> Damos ao seu projeto a viabilidade necessessaria para concretizar as suas obras. </h4>
 
-            <button class="btn2" > Serviços </button>
-            <button class="btn3 m-4"> Contactar </button>
+            <button class="btn2" id="btn_service"> <a href="#services" > Serviços </a> </button>
+            <button class="btn3 m-4"> <a style="color: #05cf9f;" href="./contact"> Contactar </a> </button>
 
         </div>
 
@@ -58,6 +59,7 @@
 
 </div>
 
+<!-- SECTION 2 -->
 <div class="container-fluid bg2 pb-5">
 
     <div id="services" class="row justify-content-center mt-4">
@@ -128,6 +130,7 @@
 
 </div>
 
+<!-- SECTION 3 -->
 <div class="container-fluid bg3" >
 
     <div class="row justify-content-center m-3 mt-0" style="padding-top: 5%; padding-bottom: 4%;"> 
@@ -156,6 +159,7 @@
 
 </div>
 
+<!-- SECTION 4 -->
 <div class="container-fluid "> 
 
     <div class="row justify-content-center" style="margin: 10%">
@@ -184,7 +188,7 @@
                     <img class="d-block w-100" src="../../assets/obra2.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="../../assets/obra1.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="../../assets/obra3.jpg" alt="Third slide">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
