--- a/work-safe/src/app/landing-page/landing-page.component.html
+++ b/work-safe/src/app/landing-page/landing-page.component.html
@@ -24,14 +24,14 @@
 
             <img class="circle" src="../../assets/circle.png " data-aos="zoom-in-up" data-aos-duration="490" > 
 
-            <img class="team" src="../../assets/team.png"  data-aos="zoom-in-up" data-aos-duration="2500"> 
+            <img class="team" src="../../assets/people12.png"  data-aos="zoom-in-up" data-aos-duration="2500"> 
 
         </div>
 
         <!-- Mobile version -->
         <div class="col-12 col-md-12 m-2  d-block d-md-none">
 
-            <img class="circle-mobile" src="../../assets/circle-mobile.png" data-aos="fade-down" data-aos-duration="2999"  > 
+            <img class="circle-mobile" src="../../assets/mobile12.png" data-aos="fade-down" data-aos-duration="2999"  > 
 
         </div>
 
@@ -69,8 +69,8 @@
         </h1>
 
         <div class="col-md-3 m-4 p-5 box-black text-justify text-center " data-aos="flip-right" data-aos-duration="1400">
-          <img class="img-service" src="../../assets/img1.png">
-          <h2>Plano Segurança</h2>
+          <img class="img-service" src="../../assets/v1.png">
+          <h2 class="mt-3">Plano Segurança</h2>
           <p class="mt-4"> O nosso PS&S , certificado pelo e Rigor no plano de orçamentação. Todos os trabalhos adjacentes listados e detalhados, ao favor do cliente.</p>
         
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
@@ -81,8 +81,8 @@
 
         
         <div class="col-md-3 m-4 p-5 box-black text-justify text-center  " data-aos="flip-left" data-aos-duration="1400"> 
-            <img class="img-service"  src="../../assets/img2.png">        
-            <h2>Plano Trabalho</h2>
+            <img class="img-service"  src="../../assets/v2.png">        
+            <h2 class="mt-3">Plano Trabalho</h2>
             <p class="mt-4">Dinamismo na resposta. Gostamos de favorecer ao cliente uma vasta possiblidade de comunicação e acessibilidade. </p>
         
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
@@ -92,8 +92,8 @@
         </div>
 
         <div class="col-md-3 m-4 p-5 box-black text-justify text-center " data-aos="flip-right" data-aos-duration="1400">
-          <img class="img-service" src="../../assets/img3.png">        
-          <h2>Gestão em Obra</h2>
+          <img class="img-service" src="../../assets/v3.png">        
+          <h2 class="mt-3">Gestão em Obra</h2>
           <p class="mt-4">Planeamento e resposta no prazo de uma semana a todos os orçamentos.</p>
         
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
@@ -103,8 +103,8 @@
         </div>
 
         <div class="col-md-3 m-4 p-5 box-black text-justify text-center " data-aos="flip-right" data-aos-duration="1400">
-            <img class="img-service" src="../../assets/img1.png">
-            <h2>Higiene no Trabalho</h2>
+            <img class="img-service" src="../../assets/v4.png">
+            <h2 class="mt-3">Higiene no Trabalho</h2>
             <p class="mt-4"> Credibilidade e Rigor no plano de orçamentação. Todos os trabalhos adjacentes listados e detalhados, ao favor do cliente.</p>
           
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
@@ -116,8 +116,8 @@
   
           
           <div class="col-md-3 m-4 p-5 box-black text-justify text-center  " data-aos="flip-left" data-aos-duration="1400"> 
-              <img class="img-service"  src="../../assets/img2.png">        
-              <h2>Gestão de Pervenção</h2>
+              <img class="img-service"  src="../../assets/v5.png">        
+              <h2 class="mt-3">Gestão de Pervenção</h2>
               <p class="mt-4">Dinamismo na resposta. Gostamos de favorecer ao cliente uma vasta possiblidade de comunicação e acessibilidade. </p>
           
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
@@ -130,14 +130,14 @@
 
 </div>
 
-<!-- SECTION 3 -->
+<!-- SECTION 3 : Nossa missao -->
 <div class="container-fluid bg3" >
 
-    <div class="row justify-content-center m-3 mt-0" style="padding-top: 5%; padding-bottom: 4%;"> 
+    <div class="row justify-content-center m-1 mt-0" style="padding-top: 5%; padding-bottom: 4%;"> 
 
         <div class="col-12 col-md-5  text-center p-3 p-md-5 mt-5">
 
-            <img style="width: 100%; height: 92%;" src="../../assets/team22.png">
+            <img style="width: 100%; height: 95%;" src="../../assets/team31.png">
 
         </div>
 
@@ -151,7 +151,7 @@
 
                 Esta plataforma poderá ser utilizada através da área de clientes no site Workcare e permite uma otimização do tempo despendido em processos administrativos, bem como um controlo rigoros. </p>
             
-            <button class="btn2 mt-3 mb-5"  data-aos="zoom-in-up" data-aos-duration="2490"  > Saber mais </button>
+            <button class="btn2 mt-3 mb-5"  data-aos="zoom-in-up" data-aos-duration="2490"  > <a href="./contact"> Saber mais </a></button>
 
         </div>
 
@@ -159,7 +159,7 @@
 
 </div>
 
-<!-- SECTION 4 -->
+<!-- SECTION 4 : Nosso trabalhos -->
 <div class="container-fluid "> 
 
     <div class="row justify-content-center" style="margin: 10%">
@@ -203,9 +203,10 @@
 
         </div>
 
-        <div class="col-6 block-1" >
+        <div class="col-6 block-1"  >
 
         </div>
+        
 
     </div>
 
